update status manager

--- a/src/dev.scss
+++ b/src/dev.scss
@@ -7,7 +7,7 @@ ul,li{list-style: none;}
   position: relative;
 
 
-  .react-refresher{
+  .react-status-manager{
     text-align: center;
     height:50px;
     line-height: 50px;
